# PushUp-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/apply-migrations/: action.yml
.github/actions/check-migrations/: action.yml
.github/actions/code-style/: action.yml
.github/actions/compile-messages/: action.yml
.github/actions/environment/: action.yml
.github/actions/tests/: action.yml
.github/workflows/: ci.yml
locales/en/LC_MESSAGES/: messages.po
src/: enums.py  exceptions.py  gettext.py  settings.py
src/core/auth/: exceptions.py
src/core/auth/commands/: login_user.py  login_with_oauth.py  refresh_token.py
src/core/auth/dtos/: tokens.py
src/core/auth/ports/: oauth_verifier.py
src/core/exercises/: aggregates.py  dtos.py  seed_data.py
src/core/exercises/commands/: create_exercise.py  delete_exercise.py  update_exercise.py
src/core/exercises/ports/: repo.py
src/core/exercises/queries/: get_exercise.py  list_exercises.py
src/core/exercises/value_objects/: __init__.py  difficulty.py  exercise_type.py  muscle_group.py
src/core/programs/: aggregates.py  dtos.py  exceptions.py
src/core/programs/ports/: repo.py
src/core/users/: aggregates.py  dtos.py  exceptions.py
src/infra/: entrypoint.py
src/infra/adapters/: __init__.py
src/infra/api/: app.py  builder.py  dependencies.py
src/infra/cli/: builder.py
src/infra/db/: tables.py
src/infra/queries/: __init__.py
src/services/: db.py
src/services/datetime/: abc.py  std.py
src/services/hasher/: abc.py  argon2.py
src/services/i18n/: abc.py  babel.py
src/services/jwt/: abc.py  pyjwt.py
src/services/uuid/: abc.py  ulid.py
tests/core/programs/: test_program_aggregate.py
tests/integration/: conftest.py
tests/integration/auth/: test_auth_endpoints.py
tests/integration/users/: test_user_repository.py
(+39 files in other folders)
